<resources>
    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">释放立即刷新</string>
    <string name="listview_loading">正在加载...</string>
    <string name="nomore_loading">没有了</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_done">刷新完成</string>
    <string name="listview_header_last_time">上次更新时间：</string>
    <string name="list_footer_loading">正在加载中…</string>
    <string name="list_footer_network_error">点击重新加载</string>
    <string name="list_footer_end">已全部加载完</string>
    <string name="text_just">刚刚</string>
    <string name="text_seconds_ago">秒前</string>
    <string name="text_minute_ago">分钟前</string>
    <string name="text_hour_ago">小时前</string>
    <string name="text_day_ago">天前</string>
    <string name="text_month_ago">月前</string>
    <string name="text_year_ago">年前</string>
    <string name="app_name">fxTrader</string>
    <string name="app_name_ch">冠东微盘</string>
    <string name="hint_account">请输入手机号码</string>
    <string name="hint_pwd">请输入密码</string>
    <string name="sure">确定</string>
    <string name="tip_forget_pwd">忘记密码？</string>
    <string name="tip_register">没有帐号？去注册</string>
    <string name="hint_agent">请输入经纪人ID</string>
    <string name="hint_nickname">请输入昵称</string>
    <string name="hint_pwd_register">请输入六位交易密码</string>
    <string name="hint_pwd_register_again">请再次输入密码</string>
    <string name="withdraw">提现</string>
    <string name="recharge">充值</string>
    <string name="profit_rate">收益率：</string>
    <string name="buy_up">买涨</string>
    <string name="buy_down">买跌</string>
    <string name="cash_coupon">现金券</string>
    <string name="system_bulletin">系统公告</string>
    <string name="master_list">高手热点</string>
    <string name="win_stream_list">连胜榜</string>
    <string name="profit_list">单笔盈利榜</string>
    <string name="red_envelope_list">红包榜</string>
    <string name="more">更多</string>
    <string name="profit_amount">盈利金额</string>
    <string name="account_unit">金币</string>
    <string name="buy_price">买入价</string>
    <string name="follow">关注</string>
    <string name="cancel_follow">取消关注</string>
    <string name="profit_max_name">%1$s 单笔最高盈利率</string>
    <string name="how_to_withdraw">如何提现</string>
    <string name="how_to_trade">如何交易</string>
    <string name="three_guarantees">三大保障</string>
    <string name="contract_name">合约名称：%1$s</string>
    <string name="contract_name_2">产品规格:%1$s</string>
    <string name="build_position_contract_name">合约名称&#160;&#160;&#160;&#160;%1$s</string>
    <string name="price_now">现价：%1$s</string>
    <string name="use_coupon">使用体验券</string>
    <string name="num_remain">剩余数量%1$s张</string>
    <string name="deposit_num">保证金：%1$s</string>
    <string name="fee_num">手续费&#160;&#160;&#160;%1$s金币/手</string>
    <string name="margin_num">%1$s金币/手</string>
    <string name="market_price_num">市场价：%1$s</string>
    <string name="build_position">建仓</string>
    <string name="cancel">取消</string>
    <string name="product_type">产品类型：%1$s</string>
    <string name="buying_price">买入价格：%1$s</string>
    <string name="buying_num">买入数量：%1$s</string>
    <string name="stop_profit">止盈</string>
    <string name="stop_loss">止损</string>
    <string name="remind_build_position_dialog">您正在进行的是一种高风险的现货投资，可能会引起本金损失\n请您充分意识到风险的存在</string>
    <string name="remind_build_position">投资有风险，交易需谨慎。最好止损，降低风险。\n注：1、暂不支持持仓过夜，收盘后将自动平仓。\n2、只能持仓一笔，平仓后才可建新单。</string>
    <string name="dialog_buy_profit_num">浮动盈亏：%1$s金币</string>
    <string name="dialog_buy_fee_num">手续费：%1$s金币/手</string>
    <string name="fee_unit">金币/手</string>
    <string name="floating_proceed">浮动收益</string>
    <string name="profit_list_num">共 %1$s 笔持仓单</string>
    <string name="close_position">平仓</string>
    <string name="buying_price_num">买入价:%1$s</string>
    <string name="sure_to_close_position">确定平仓</string>
    <string name="order_detail">订单详情</string>
    <string name="order_detail_product_des">%1$s(%2$s金币)</string>
    <string name="order_detail_fund_num">盈亏资金：%1$s金币(%2$s)</string>
    <string name="order_detail_order_num">订单号：%1$s</string>
    <string name="order_detail_buy_price_num">入仓价：%1$s</string>
    <string name="order_detail_buy_account_num">入仓金额：%1$s</string>
    <string name="order_detail_price_num">行情：</string>
    <string name="order_detail_balance_num">本单余额：%1$s</string>
    <string name="order_detail_decide_type">方向：%1$s</string>
    <string name="order_detail_buy_num">数量：%1$s</string>
    <string name="order_detail_build_time">创建时间：%1$s</string>
    <string name="stop_profit_num">止盈：%1$s</string>
    <string name="stop_loss_num">止损：%1$s</string>
    <string name="order_detail_remind_time">为创造低风险实践式教育，暂不支持持仓过夜，\n本订单若在(%1$s)未平仓，系统将自动进行结算平仓。</string>
    <string name="change">修改</string>
    <string name="login_out">退出账号</string>
    <string name="now_close_position">立即平仓</string>
    <string name="doubt_close_position">您确定要平仓么？</string>
    <string name="position_list">持仓信息</string>
    <string name="total_break_even">总盈亏</string>
    <string name="total_profit">总盈亏：￥ </string>
    <string name="profit_num">+%1$s</string>
    <string name="loss_num">-%1$s</string>
    <string name="position_list_num">共%1$d持仓单</string>
    <string name="personal_center">个人中心</string>
    <string name="fund_list">收支明细</string>
    <string name="trade_history">交易历史</string>
    <string name="agent_platform">经纪人平台</string>
    <string name="my_buy">我的合买</string>
    <string name="guandong_use_rules">冠东微盘\n使用规则</string>
    <string name="announcement">公告</string>
    <string name="share_to_friends">分享好友</string>
    <string name="my_gift_certificate">我的现金券</string>
    <string name="personal_data">个人资料</string>
    <string name="personal_info">个人信息</string>
    <string name="balance_num">帐号余额：%1$s</string>
    <string name="sex">性别</string>
    <string name="change_pwd">密码修改</string>
    <string name="unbind_bank_card">解绑银行卡</string>
    <string name="bind_phone">绑定手机</string>
    <string name="remind_bind_phone_1">您还未绑定手机</string>
    <string name="remind_bind_phone_2">马上绑定立领</string>
    <string name="remind_bind_phone">为了你的账户安全，请先进行身份验证！</string>
    <string name="hint_phone">请输入绑定的手机</string>
    <string name="hint_forget_pwd">请输入6位以上数字或字母</string>
    <string name="hint_forget_pwd_confirm">请重复以上密码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="hint_verify_code">请输入验证码</string>
    <string name="confirm_change">确认修改</string>
    <string name="agreement">我已经阅读同意 微协议</string>
    <string name="hint_recharge_pwd">输入充值密码</string>
    <string name="hint_new_pwd">输入新密码</string>
    <string name="hint_confirm_pwd">确认密码</string>
    <string name="experience_voucher">体验券</string>
    <string name="money_num">￥ %1$s</string>
    <string name="valid_from_to">有效期%1$s至%2$s</string>
    <string name="profit_and_loss_detail">收支明细</string>
    <string name="profit_and_loss">浮动盈亏:</string>
    <string name="income_num">收入%1$s</string>
    <string name="pay_num">支出%1$s</string>
    <string name="account_num">金额：%1$s金币</string>
    <string name="see">查看</string>
    <string name="readed">已读</string>
    <string name="unread">未读</string>
    <string name="time_num">时间：%1$s</string>
    <string name="sum_deal_count">总手数：%1$s</string>
    <string name="sum_num">总单数：%1$s</string>
    <string name="trade_rules">交易规则</string>
    <string name="production_intro_rules">产品规则介绍</string>
    <string name="account_rules">账号绑定注册</string>
    <string name="info_remind">信息提示</string>
    <string name="info_remind_tip">为了您的帐号安全\n请绑定手机！</string>
    <string name="to_bind">去绑定</string>
    <string name="withdraw_can_num">可提取金额：%1$s</string>
    <string name="remind_withdraw_account">（每笔至少10金币；每笔收取2金币手续费）</string>
    <string name="input_withdraw_account">输入体现金额</string>
    <string name="trade_num">选择交易数量：%1$s</string>
    <string name="select_trade_num">选择交易数量：</string>
    <string name="homepage">首页</string>
    <string name="protection">三大保障</string>
    <string name="td_start">TD开户</string>
    <string name="find">发现</string>
    <string name="mine">我的</string>
    <string name="time_line">分时线</string>
    <string name="five_min">5分钟</string>
    <string name="day_k">日K线</string>
    <string name="half_hour">30分钟</string>
    <string name="one_hour">1小时</string>
    <string name="handling">处理中。。。</string>
    <string name="account_balance">账号余额：</string>
    <string name="my_coins">我的金币</string>
    <string name="expect_raise">看涨</string>
    <string name="rank">排名：</string>
    <string name="expect_raise_num">%1$s人买涨</string>
    <string name="expect_fall_num">%1$s人买跌</string>
    <string name="expect_fall">看跌</string>
    <string name="master_hot">高手热点</string>
    <string name="master_hot_list">高手热点榜</string>
    <string name="money_unit">金币</string>
    <string name="protection_normal_license_plate">正规牌照</string>
    <string name="protection_normal_license_plate_des">广东冠东石化产品交易中心有限公司是由冠盛集团公司出资控股的，经广东省人民政府批准成立的一家省级石化产品交易平台，注册资本为人民币壹亿捌仟捌佰万金币。</string>
    <string name="protection_safe">提现安全、便捷</string>
    <string name="protection_safe_des">随充随提、当天提现即日到账。</string>
    <string name="protection_sys_safe">系统安全保证</string>
    <string name="protection_sys_safe_des">系统由具有多年金融和互联网行业相关经验研发团队精心打造，成熟安全可靠。</string>
    <string name="production_max_profit_percent">单笔最高盈利率</string>
    <string name="win">胜</string>
    <string name="contract_price_num">%1$s %2$s</string>
    <string name="homepage_profit_num">17点收益</string>
    <string name="highest_num">最高 %1$s</string>
    <string name="lowest_num">最低 %1$s</string>
    <string name="yesterday_close_num">昨收 %1$s</string>
    <string name="today_open_num">今开 %1$s</string>
    <string name="login">登录</string>
    <string name="remind_login_account">账号不能为空！</string>
    <string name="remind_login_pwd">密码不能为空！</string>
    <string name="register">注册</string>
    <string name="hint_graphical_verification_code">请输入图形验证码</string>
    <string name="hint_verification_code">请输入验证码</string>
    <string name="get_phone_verification_code">获取手机验证码</string>
    <string name="submit">提交</string>
    <string name="payment_detail">收支详情</string>
    <string name="serial_number">流水号：</string>
    <string name="type">类型：</string>
    <string name="time">时间：</string>
    <string name="payment">收支：</string>
    <string name="receive_money">到账金额：</string>
    <string name="hint_recharge">输入充值金额</string>
    <string name="recharge_yh">银行卡支付</string>
    <string name="my_red_envelope">我的红包</string>
    <string name="red_envelope_receive">收到的红包</string>
    <string name="red_envelope_send">发出的红包</string>
    <string name="receive_red_enveloped">收到红包：</string>
    <string name="num_unit">个</string>
    <string name="red_envelope_num">红包数量：</string>
    <string name="open">拆开</string>
    <string name="price_latest">现价</string>
    <string name="price_target">目标价</string>
    <string name="price_stop_loss">止损价</string>
    <string name="remind_profit_and_loss">范围0-90%</string>
    <string name="remind_build_position_send_red_envelope">我若盈利，将送出盈利的5%，分享给高手</string>
    <string name="withdraw_info_bank">银行信息</string>
    <string name="withdraw_remind_bank">请选择银行</string>
    <string name="province">省份</string>
    <string name="withdraw_remind_province">请选择省份</string>
    <string name="city">城市</string>
    <string name="withdraw_remind_city">请选择城市</string>
    <string name="bank_branch">银行支行</string>
    <string name="withdraw_remind_bank_branch">输入银行支行名称</string>
    <string name="bank_card">银行卡号</string>
    <string name="withdraw_remind_card">输入借记卡卡号</string>
    <string name="name">姓名</string>
    <string name="withdraw_remind">请输入持卡人姓名</string>
    <string name="red_envelope">红包</string>
    <string name="my_follow">我的关注</string>
    <string name="trade_rule_intro_title">产品规则介绍</string>
    <string name="master_my_followed">我关注的高手</string>
    <string name="person_unit">人</string>
    <string name="remind_followed_position_state">您当前还未参与合买</string>
</resources>