<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout style="@style/TitleLayout">

        <ImageButton
            android:id="@id/title_back"
            style="@style/TiTleBackBtn" />

        <TextView
            android:id="@id/title_content_tv"
            style="@style/TiTleContentTv" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_ed"
        android:paddingLeft="14dp"
        android:paddingRight="14dp">

        <TextView
            android:id="@+id/order_detail_ok_tv"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="19dp"
            android:background="@drawable/shape_sure"
            android:gravity="center"
            android:text="@string/sure_to_close_position"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/order_detail_ok_tv"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/shape_white_corner_3"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/order_detail_product_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/order_detail_product_des"
                    android:textColor="@color/red_text"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/order_detail_profit_tv"
                    style="@style/OrderDetailTv"
                    android:layout_marginTop="15dp"
                    android:text="@string/order_detail_fund_num" />

                <TextView
                    android:id="@+id/order_detail_order_num_tv"
                    style="@style/OrderDetailTv"
                    android:layout_marginTop="20dp"
                    android:text="@string/order_detail_order_num" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="15.8dp"
                    android:background="@color/black_28" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="118dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/order_detail_buy_price_tv"
                            style="@style/OrderDetailTv"
                            android:text="@string/order_detail_buy_price_num" />

                        <TextView
                            android:id="@+id/order_detail_buy_account_tv"
                            style="@style/OrderDetailTv"
                            android:layout_marginTop="20dp"
                            android:text="@string/order_detail_buy_account_num" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/OrderDetailTv"
                                android:text="@string/order_detail_price_num" />
                            <TextView
                                android:id="@+id/order_detail_price_tv"
                                style="@style/OrderDetailTv"
                                android:text="@string/order_detail_price_num" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/order_detail_balance_tv"
                            style="@style/OrderDetailTv"
                            android:text="@string/order_detail_balance_num" />

                        <TextView
                            android:id="@+id/order_detail_deal_direction_tv"
                            style="@style/OrderDetailTv"
                            android:layout_marginTop="20dp"
                            android:text="@string/order_detail_decide_type" />


                        <TextView
                            android:id="@+id/order_detail_buy_num_tv"
                            style="@style/OrderDetailTv"
                            android:layout_marginTop="20dp"
                            android:text="@string/order_detail_buy_num" />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/black_28" />

                <TextView
                    android:id="@+id/order_detail_build_time_tv"
                    style="@style/OrderDetailTv"
                    android:layout_marginBottom="19.8dp"
                    android:layout_marginTop="19.8dp"
                    android:text="@string/order_detail_build_time" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/black_28" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp">

                    <TextView
                        android:id="@+id/order_detail_stop_profit_tv"
                        style="@style/OrderDetailTv"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:text="@string/stop_profit_num" />

                    <TextView
                        android:id="@+id/order_detail_stop_loss_tv"
                        style="@style/OrderDetailTv"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="28dp"
                        android:layout_toRightOf="@id/order_detail_stop_profit_tv"
                        android:text="@string/stop_loss_num" />

                    <TextView
                        android:id="@+id/order_detail_change_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/shape_sure"
                        android:paddingBottom="5dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingTop="5dp"
                        android:text="@string/change"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/black_28" />

                <TextView
                    android:id="@+id/order_detail_remind_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:gravity="center_horizontal"
                    android:text="@string/order_detail_remind_time"
                    android:textColor="@color/gray_6"
                    android:textSize="12sp" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</LinearLayout>
